tests/out/error/ident/redef.out
tests/out/error/ident/redef.in.bt:3:2 error: redefinition of `same`
tests/out/error/ident/redef.in.bt:6:3 error: redefinition of `same`
tests/out/error/ident/redef.in.bt:11:2 error: redefinition of `my_fun`
